--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <li><a class="dropdown-item" href="#"> PS4</a></li>
                                 <li><a class="dropdown-item" href="#">PSVR</a></li>
                                 <li><a class="dropdown-item" href="#">PS Plus</a></li>
-                                <li><a class="dropdown-item" href="#">Comprar jogos</a></li>
+                                <li><a class="dropdown-item" href="#">Comprar jogo</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="#">Controle sem fio DualSense</a></li>
                               </ul>
