Pequena alteração no menu mobile

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         <nav class="navbar navbar-expand-lg navbar-light p-0" id="navbar">
             <div class="container-fluid align-items-lg-baseline mt-4">
               <a class="navbar-brand img-fluid align-text p-0" href="#"><img src="imagens/playstation-store-logo-2.png" alt="" width="130"></a>
-              <a class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarPrincipal" aria-controls="navbarPrincipal" aria-expanded="false" aria-label="Toggle navigation">
-                Novidades
+              <a class="navbar-toggler dropdown-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#navbarPrincipal" aria-controls="navbarPrincipal" aria-expanded="false" aria-label="Toggle navigation">
+              Novidade
               </a>
               <div class="collapse navbar-collapse" id="navbarPrincipal">
                   
