Alinhamento de grid

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
     <article class="1">
    
       <!-- GRID DE JOGOS 1 -->
-    <div class="container-fluid mt-4 " class="grid-jogos">
-      <div class="row ">
+    <div class="container-fluid mt-4 text-center grid-jogos " >
+      <div class="row text-center">
         <div class="col-sm-4 col-6 card-jogo p-1">
           <img src="imagens/gran-turismo.jpg"  >
         </div>
@@ -398,7 +398,7 @@
 <!-- GRID CATEGORIAS -->
 <article>
 
-<div class="container-fluid mt-5 " class="grid-jogos">
+<div class="container-fluid mt-5 text-center grid-jogos">
   <h3 class="text-center">Veja mais</h3>
   <div class="row ">
     <div class="col-sm-4 col-6 card-jogo p-1">
